--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj
@@ -114,15 +114,39 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="lib\AdaptiveActionOptions.h" />
+    <ClInclude Include="lib\AdaptiveBoundaryOptions.h" />
     <ClInclude Include="lib\AdaptiveCard.h" />
+    <ClInclude Include="lib\AdaptiveCardOptions.h" />
+    <ClInclude Include="lib\AdaptiveChoiceSetInputOptions.h" />
+    <ClInclude Include="lib\AdaptiveColorOption.h" />
+    <ClInclude Include="lib\AdaptiveColorOptions.h" />
     <ClInclude Include="lib\AdaptiveColumn.h" />
+    <ClInclude Include="lib\AdaptiveColumnOptions.h" />
     <ClInclude Include="lib\AdaptiveColumnSet.h" />
+    <ClInclude Include="lib\AdaptiveColumnSetOptions.h" />
     <ClInclude Include="lib\AdaptiveContainer.h" />
+    <ClInclude Include="lib\AdaptiveContainerOptions.h" />
+    <ClInclude Include="lib\AdaptiveDateInputOptions.h" />
     <ClInclude Include="lib\AdaptiveFact.h" />
     <ClInclude Include="lib\AdaptiveFactSet.h" />
+    <ClInclude Include="lib\AdaptiveFactSetOptions.h" />
+    <ClInclude Include="lib\AdaptiveFontSizeOptions.h" />
+    <ClInclude Include="lib\AdaptiveHostOptions.h" />
     <ClInclude Include="lib\AdaptiveImage.h" />
+    <ClInclude Include="lib\AdaptiveImageOptions.h" />
     <ClInclude Include="lib\AdaptiveImageSet.h" />
+    <ClInclude Include="lib\AdaptiveImageSetOptions.h" />
+    <ClInclude Include="lib\AdaptiveImageSizeOptions.h" />
+    <ClInclude Include="lib\AdaptiveNumberInputOptions.h" />
+    <ClInclude Include="lib\AdaptiveSeparationOptions.h" />
+    <ClInclude Include="lib\AdaptiveShowCardOptions.h" />
     <ClInclude Include="lib\AdaptiveTextBlock.h" />
+    <ClInclude Include="lib\AdaptiveTextBlockOptions.h" />
+    <ClInclude Include="lib\AdaptiveTextInputOptions.h" />
+    <ClInclude Include="lib\AdaptiveTextOptions.h" />
+    <ClInclude Include="lib\AdaptiveTimeInputOptions.h" />
+    <ClInclude Include="lib\AdaptiveToggleInputOptions.h" />
     <ClInclude Include="lib\AsyncOperations.h" />
     <ClInclude Include="lib\DefaultResourceDictionary.h" />
     <ClInclude Include="lib\ErrorHandling.h" />
@@ -134,15 +158,39 @@
     <ClInclude Include="lib\Vector.h" />
     <ClInclude Include="lib\XamlBuilder.h" />
     <ClInclude Include="lib\XamlCardRendererComponent.h" />
+    <ClCompile Include="lib\AdaptiveActionOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveBoundaryOptions.cpp" />
     <ClCompile Include="lib\AdaptiveCard.cpp" />
+    <ClCompile Include="lib\AdaptiveCardOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveChoiceSetInputOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveColorOption.cpp" />
+    <ClCompile Include="lib\AdaptiveColorOptions.cpp" />
     <ClCompile Include="lib\AdaptiveColumn.cpp" />
+    <ClCompile Include="lib\AdaptiveColumnOptions.cpp" />
     <ClCompile Include="lib\AdaptiveColumnSet.cpp" />
+    <ClCompile Include="lib\AdaptiveColumnSetOptions.cpp" />
     <ClCompile Include="lib\AdaptiveContainer.cpp" />
+    <ClCompile Include="lib\AdaptiveContainerOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveDateInputOptions.cpp" />
     <ClCompile Include="lib\AdaptiveFact.cpp" />
     <ClCompile Include="lib\AdaptiveFactSet.cpp" />
+    <ClCompile Include="lib\AdaptiveFactSetOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveFontSizeOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveHostOptions.cpp" />
     <ClCompile Include="lib\AdaptiveImage.cpp" />
+    <ClCompile Include="lib\AdaptiveImageOptions.cpp" />
     <ClCompile Include="lib\AdaptiveImageSet.cpp" />
+    <ClCompile Include="lib\AdaptiveImageSetOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveImageSizeOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveNumberInputOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveSeparationOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveShowCardOptions.cpp" />
     <ClCompile Include="lib\AdaptiveTextBlock.cpp" />
+    <ClCompile Include="lib\AdaptiveTextBlockOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveTextInputOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveTextOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveTimeInputOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveToggleInputOptions.cpp" />
     <ClCompile Include="lib\ImageLoadTracker.cpp" />
     <ClCompile Include="lib\Util.cpp" />
     <ClCompile Include="lib\XamlBuilder.cpp" />
