Add basic handling for Text, Time, Date, and Toggle inputs (#254)
Add Input.Text, Input.Toggle, Input.Date, and Input.Time

--- a/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj
+++ b/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj
@@ -34,6 +34,10 @@
     <ClCompile Include="..\..\shared\cpp\ObjectModel\FactSet.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\Image.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\ImageSet.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\InputDate.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\InputText.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\InputTime.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\InputToggle.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\ParseUtil.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\AdaptiveCard.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\BaseCardElement.cpp" />
@@ -51,6 +55,10 @@
     <ClInclude Include="..\..\shared\cpp\ObjectModel\HostOptions.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\Image.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\ImageSet.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\InputDate.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\InputText.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\InputTime.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\InputToggle.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\ParseUtil.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\AdaptiveCard.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\BaseCardElement.h" />
