--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj
@@ -138,6 +138,10 @@
     <ClInclude Include="lib\AdaptiveImageSet.h" />
     <ClInclude Include="lib\AdaptiveImageSetOptions.h" />
     <ClInclude Include="lib\AdaptiveImageSizeOptions.h" />
+    <ClInclude Include="lib\AdaptiveInputDate.h" />
+    <ClInclude Include="lib\AdaptiveInputText.h" />
+    <ClInclude Include="lib\AdaptiveInputTime.h" />
+    <ClInclude Include="lib\AdaptiveInputToggle.h" />
     <ClInclude Include="lib\AdaptiveNumberInputOptions.h" />
     <ClInclude Include="lib\AdaptiveSeparationOptions.h" />
     <ClInclude Include="lib\AdaptiveShowCardOptions.h" />
@@ -182,6 +186,10 @@
     <ClCompile Include="lib\AdaptiveImageSet.cpp" />
     <ClCompile Include="lib\AdaptiveImageSetOptions.cpp" />
     <ClCompile Include="lib\AdaptiveImageSizeOptions.cpp" />
+    <ClCompile Include="lib\AdaptiveInputDate.cpp" />
+    <ClCompile Include="lib\AdaptiveInputText.cpp" />
+    <ClCompile Include="lib\AdaptiveInputTime.cpp" />
+    <ClCompile Include="lib\AdaptiveInputToggle.cpp" />
     <ClCompile Include="lib\AdaptiveNumberInputOptions.cpp" />
     <ClCompile Include="lib\AdaptiveSeparationOptions.cpp" />
     <ClCompile Include="lib\AdaptiveShowCardOptions.cpp" />
