--- a/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj
+++ b/source/uwp/ObjectModelProjection/ObjectModelProjection.vcxproj
@@ -37,6 +37,7 @@
     <ClCompile Include="..\..\shared\cpp\ObjectModel\Image.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\ImageSet.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\InputDate.cpp" />
+    <ClCompile Include="..\..\shared\cpp\ObjectModel\InputNumber.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\InputText.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\InputTime.cpp" />
     <ClCompile Include="..\..\shared\cpp\ObjectModel\InputToggle.cpp" />
@@ -60,6 +61,7 @@
     <ClInclude Include="..\..\shared\cpp\ObjectModel\Image.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\ImageSet.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\InputDate.h" />
+    <ClInclude Include="..\..\shared\cpp\ObjectModel\InputNumber.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\InputText.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\InputTime.h" />
     <ClInclude Include="..\..\shared\cpp\ObjectModel\InputToggle.h" />
