--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="lib\AdaptiveImageSetOptions.h" />
     <ClInclude Include="lib\AdaptiveImageSizeOptions.h" />
     <ClInclude Include="lib\AdaptiveInputDate.h" />
+    <ClInclude Include="lib\AdaptiveInputNumber.h" />
     <ClInclude Include="lib\AdaptiveInputText.h" />
     <ClInclude Include="lib\AdaptiveInputTime.h" />
     <ClInclude Include="lib\AdaptiveInputToggle.h" />
@@ -191,6 +192,7 @@
     <ClCompile Include="lib\AdaptiveImageSetOptions.cpp" />
     <ClCompile Include="lib\AdaptiveImageSizeOptions.cpp" />
     <ClCompile Include="lib\AdaptiveInputDate.cpp" />
+    <ClCompile Include="lib\AdaptiveInputNumber.cpp" />
     <ClCompile Include="lib\AdaptiveInputText.cpp" />
     <ClCompile Include="lib\AdaptiveInputTime.cpp" />
     <ClCompile Include="lib\AdaptiveInputToggle.cpp" />
