--- a/docs/Docs.csproj
+++ b/docs/Docs.csproj
@@ -9,6 +9,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\documentation - Copy.html">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="wwwroot\documentation.html" />
+    <Content Include="wwwroot\explorer.html" />
+    <Content Include="wwwroot\index - Copy.html" />
     <Content Include="wwwroot\index.html" />
   </ItemGroup>
   <ItemGroup>
