--- a/docs/Docs.csproj
+++ b/docs/Docs.csproj
@@ -10,7 +10,12 @@
 
   <ItemGroup>
     <Content Include="wwwroot\documentation.html" />
+    <Content Include="wwwroot\documentation\documentation.html" />
+    <Content Include="wwwroot\documentation\index.html" />
     <Content Include="wwwroot\explorer.html" />
+    <Content Include="wwwroot\explorer\adaptive-cards.js" />
+    <Content Include="wwwroot\explorer\explorer.html" />
+    <Content Include="wwwroot\explorer\index.html" />
     <Content Include="wwwroot\index.html" />
   </ItemGroup>
   <ItemGroup>
