--- a/docs/Docs.csproj
+++ b/docs/Docs.csproj
@@ -5,17 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot/explorer\explorer.css" />
+    <Content Remove="wwwroot/explorer\explorer.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Properties\PublishProfiles\adaptivecards - Web Deploy.pubxml" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="wwwroot\documentation.html" />
-    <Content Include="wwwroot\documentation\documentation.html" />
+    <Content Include="wwwroot\content\shared.css" />
     <Content Include="wwwroot\documentation\index.html" />
-    <Content Include="wwwroot\explorer.html" />
-    <Content Include="wwwroot\explorer\adaptive-cards.js" />
     <Content Include="wwwroot\explorer\explorer.css" />
-    <Content Include="wwwroot\explorer\explorer.html" />
     <Content Include="wwwroot\explorer\explorer.js" />
     <Content Include="wwwroot\explorer\index.html" />
     <Content Include="wwwroot\index.html" />
