fleshed out information architecture

--- a/docs/Docs.csproj
+++ b/docs/Docs.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\markdown\Partners\**" />
+    <Content Remove="wwwroot\markdown\Partners\**" />
+    <EmbeddedResource Remove="wwwroot\markdown\Partners\**" />
+    <None Remove="wwwroot\markdown\Partners\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="wwwroot/explorer\explorer.css" />
     <Content Remove="wwwroot/explorer\explorer.js" />
   </ItemGroup>
@@ -14,7 +21,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\content\cats\Cat_Sat_1_400x406.png" />
+    <Content Include="wwwroot\content\cats\Cat_Sat_2-Glasses_400x297.png" />
+    <Content Include="wwwroot\content\cats\Cat_Sat_2_400x297.png" />
     <Content Include="wwwroot\content\shared.css" />
+    <Content Include="wwwroot\documentation\documentation.js" />
     <Content Include="wwwroot\documentation\index.html" />
     <Content Include="wwwroot\explorer\explorer.css" />
     <Content Include="wwwroot\explorer\explorer.js" />
@@ -22,6 +33,25 @@
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
     <Content Include="wwwroot\index.html" />
+    <Content Include="wwwroot\markdown\about\Future.md" />
+    <Content Include="wwwroot\markdown\about\Principles.md">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="wwwroot\markdown\about\ValueProp.md">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="wwwroot\markdown\about\Goals.md" />
+    <Content Include="wwwroot\markdown\create\CardSchema.md" />
+    <Content Include="wwwroot\markdown\create\Speech.md">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="wwwroot\markdown\create\GettingStarted.md" />
+    <Content Include="wwwroot\markdown\display\Actions.md" />
+    <Content Include="wwwroot\markdown\display\CustomizingRenderer.md" />
+    <Content Include="wwwroot\markdown\display\GettingStarted.md">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="wwwroot\markdown\display\HostConfigSchema.md" />
     <Content Include="wwwroot\markdown\Home.md" />
     <Content Include="wwwroot\samples\index.html" />
   </ItemGroup>
