pulll samples and markdown into project and hook up samples tab

--- a/source/tools/GenerateSamples/GenerateSamples/GenerateSamples.csproj
+++ b/source/tools/GenerateSamples/GenerateSamples/GenerateSamples.csproj
@@ -53,7 +53,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Preamble.txt" />
+    <EmbeddedResource Include="Header.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
