--- a/docs/Docs.csproj
+++ b/docs/Docs.csproj
@@ -6,6 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\explorer\cards\Column.SelectAction.json" />
+    <Content Include="wwwroot\explorer\cards\Column.Separation.json" />
+    <Content Include="wwwroot\explorer\cards\Column.Size.json" />
+    <Content Include="wwwroot\explorer\cards\Column.SizeRatio.json" />
+    <Content Include="wwwroot\explorer\cards\ColumnSet.Columns.json" />
+    <Content Include="wwwroot\samples\samples.html" />
+    <Content Include="wwwroot\samples\samples.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AdaptiveCards" Version="1.0.19" />
     <PackageReference Include="MarkedNet" Version="1.0.6" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
