--- a/docs/appsettings.json
+++ b/docs/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "5969b3dc-f7bb-4daa-8dcc-9c54ef8bcc80"
   }
 }
