--- a/source/website/Website.csproj
+++ b/source/website/Website.csproj
@@ -7,6 +7,13 @@
     <ApplicationInsightsAnnotationResourceId>/subscriptions/9ad09adf-c85f-43a0-96fe-18b146d1f90e/resourceGroups/AdaptiveCards/providers/microsoft.insights/components/adaptivecards-staging</ApplicationInsightsAnnotationResourceId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Include="wwwroot\explorer\markdown\Action.Http.md" />
+    <Content Include="wwwroot\explorer\markdown\Action.OpenUrl.md" />
+    <Content Include="wwwroot\explorer\markdown\Action.ShowCard.md" />
+    <Content Include="wwwroot\explorer\markdown\Action.Submit.md" />
+  </ItemGroup>
+
   
   
   <ItemGroup>
