--- a/source/website/Properties/launchSettings.json
+++ b/source/website/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:55009/",
+      "applicationUrl": "http://localhost:55000",
       "sslPort": 0
     }
   },
