Handle Popup action mode and styling for ShowCard Actions.

--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj
@@ -119,7 +119,6 @@
     <ClInclude Include="lib\AdaptiveCard.h" />
     <ClInclude Include="lib\AdaptiveCardOptions.h" />
     <ClInclude Include="lib\AdaptiveHttpAction.h" />
-    <ClInclude Include="lib\AdaptiveHttpActionEventArgs.h" />
     <ClInclude Include="lib\AdaptiveInputChoice.h" />
     <ClInclude Include="lib\AdaptiveInputChoiceSet.h" />
     <ClInclude Include="lib\AdaptiveChoiceSetInputOptions.h" />
@@ -149,12 +148,11 @@
     <ClInclude Include="lib\AdaptiveInputToggle.h" />
     <ClInclude Include="lib\AdaptiveNumberInputOptions.h" />
     <ClInclude Include="lib\AdaptiveOpenUrlAction.h" />
-    <ClInclude Include="lib\AdaptiveOpenUrlActionEventArgs.h" />
     <ClInclude Include="lib\AdaptiveSeparationOptions.h" />
     <ClInclude Include="lib\AdaptiveShowCardAction.h" />
+    <ClInclude Include="lib\AdaptiveActionEventArgs.h" />
     <ClInclude Include="lib\AdaptiveShowCardOptions.h" />
     <ClInclude Include="lib\AdaptiveSubmitAction.h" />
-    <ClInclude Include="lib\AdaptiveSubmitActionEventArgs.h" />
     <ClInclude Include="lib\AdaptiveTextBlock.h" />
     <ClInclude Include="lib\AdaptiveTextBlockOptions.h" />
     <ClInclude Include="lib\AdaptiveTextInputOptions.h" />
@@ -177,7 +175,6 @@
     <ClCompile Include="lib\AdaptiveCard.cpp" />
     <ClCompile Include="lib\AdaptiveCardOptions.cpp" />
     <ClCompile Include="lib\AdaptiveHttpAction.cpp" />
-    <ClCompile Include="lib\AdaptiveHttpActionEventArgs.cpp" />
     <ClCompile Include="lib\AdaptiveInputChoice.cpp" />
     <ClCompile Include="lib\AdaptiveInputChoiceSet.cpp" />
     <ClCompile Include="lib\AdaptiveChoiceSetInputOptions.cpp" />
@@ -207,12 +204,11 @@
     <ClCompile Include="lib\AdaptiveInputToggle.cpp" />
     <ClCompile Include="lib\AdaptiveNumberInputOptions.cpp" />
     <ClCompile Include="lib\AdaptiveOpenUrlAction.cpp" />
-    <ClCompile Include="lib\AdaptiveOpenUrlActionEventArgs.cpp" />
     <ClCompile Include="lib\AdaptiveSeparationOptions.cpp" />
     <ClCompile Include="lib\AdaptiveShowCardAction.cpp" />
+    <ClCompile Include="lib\AdaptiveActionEventArgs.cpp" />
     <ClCompile Include="lib\AdaptiveShowCardOptions.cpp" />
     <ClCompile Include="lib\AdaptiveSubmitAction.cpp" />
-    <ClCompile Include="lib\AdaptiveSubmitActionEventArgs.cpp" />
     <ClCompile Include="lib\AdaptiveTextBlock.cpp" />
     <ClCompile Include="lib\AdaptiveTextBlockOptions.cpp" />
     <ClCompile Include="lib\AdaptiveTextInputOptions.cpp" />
