--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj.filters
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj.filters
@@ -50,9 +50,7 @@
     <ClCompile Include="lib\AdaptiveHttpAction.cpp" />
     <ClCompile Include="lib\AdaptiveShowCardAction.cpp" />
     <ClCompile Include="lib\AdaptiveSubmitAction.cpp" />
-    <ClCompile Include="lib\AdaptiveHttpActionEventArgs.cpp" />
-    <ClCompile Include="lib\AdaptiveOpenUrlActionEventArgs.cpp" />
-    <ClCompile Include="lib\AdaptiveSubmitActionEventArgs.cpp" />
+    <ClCompile Include="lib\AdaptiveActionEventArgs.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lib\AdaptiveCard.h" />
@@ -112,9 +110,7 @@
     <ClInclude Include="lib\AdaptiveHttpAction.h" />
     <ClInclude Include="lib\AdaptiveShowCardAction.h" />
     <ClInclude Include="lib\AdaptiveSubmitAction.h" />
-    <ClInclude Include="lib\AdaptiveHttpActionEventArgs.h" />
-    <ClInclude Include="lib\AdaptiveOpenUrlActionEventArgs.h" />
-    <ClInclude Include="lib\AdaptiveSubmitActionEventArgs.h" />
+    <ClInclude Include="lib\AdaptiveActionEventArgs.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="idl\AdaptiveCards.XamlCardRenderer.idl" />
